--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   font-family: 'Rubik', sans-serif;
+}
+
+.container {
+  margin: 20px;
+  padding: 10px;
 }
