--- a/src/screens/Details.module.css
+++ b/src/screens/Details.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,400&family=Redressed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Nunito:ital,wght@0,300;1,400&family=Redressed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Dancing+Script:wght@500&family=Hubballi&family=Indie+Flower&family=Nunito:ital,wght@0,300;1,400&family=Raleway:ital,wght@1,300&family=Redressed&family=Shizuru&display=swap');
 
 .header {
   font-family: 'Nunito', sans-serif;
@@ -19,4 +20,10 @@
 .body {
   text-align: center;
   font-size: 20px;
+}
+
+.comments {
+  text-align: center;
+  font-size: 15px;
+  font-family: 'Raleway', sans-serif;
 }
