--- a/src/components/postList/Post.module.css
+++ b/src/components/postList/Post.module.css
@@ -10,6 +10,7 @@
 
 p {
   text-align: center;
+  padding: 5px;
 }
 
 .header {
@@ -32,7 +33,6 @@ p {
 .button {
   border-radius: 5px;
   padding: 5px 10px;
-  text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
@@ -42,4 +42,9 @@ p {
   text-align: center;
   font-size: 15px;
   font-family: 'Raleway', sans-serif;
+}
+
+.container .button {
+  display: flex;
+  margin: auto;
 }
